--- a/Styling/style.css
+++ b/Styling/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 /* Här börjar Header designen, alltså topp-menyn */
 header {
     position: fixed;
@@ -12,6 +13,7 @@ header {
     left: 0;
     width: 100%;
     background-color: #333;
+    z-index: 100;
 }
 
 .flex {
@@ -29,6 +31,7 @@ header {
 .navbar{
     justify-content: space-between
 }
+
 /* Detta tar bort punkterna som hamnar framför länkarna om man inte ändrar style til 'none' */
 .nav-links {
     gap: 20px;
@@ -42,9 +45,96 @@ header {
     text-transform: capitalize;
     transition: 0.2s;
 }
+
 /* Detta ändrar färgen när man håller över länken i Header */
 .navbar a:hover {
     color: #ddd;
 }
-
 /* Här slutar Header designen */
+
+/* Home page design */
+.homepage {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background: url("Images/background-homepage.jpg");
+    background-position: center;
+    background-size: cover;
+    }
+
+.homepage .content {
+    position: relative;
+    height: 85%;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.homepage .text {
+    color: white;
+    text-align: center;
+}
+
+.homepage .text h1 {
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 0px; /*Eventuellt mellanrum under rubriken*/
+}
+
+.homepage a {
+    color: #333;
+    background: #fff;
+    margin-top: 20px; /*Mellanrum över "knappen" */
+    padding: 8px 20px; /*Mellanrum från länken till kanterna på knappen*/
+    border-radius: 6px;
+    border: 2px solid #fff;
+    box-shadow: rgba(0, 0, 0, 0.4);
+    font-size: 0.9rem;
+    transition: 0.2s;
+}
+
+.homepage a:hover {
+    color: #fff;
+    background: rgba(255, 255, 255, 0.4);
+}
+/* Slut på Home Page Design */
+
+/* Atlas */
+section {
+    padding-top: 80px;
+    background-color: rgba(0, 0, 0, 0.04);
+
+}
+
+.section-title {
+    text-align: center;
+}
+
+.section h2 {
+    font-size: 2rem;
+}
+
+section .cards {
+    margin-top: 50px;
+}
+
+section .card {
+    width: calc(100% - 30px);
+    text-align: center;
+    list-style: none;
+    background-color: #fff;
+    padding: 40px 15px;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 40px;
+}
+
+section .card img {
+    height: 420px;
+    width: 420px;
+    border-radius: 50%;
+    margin-bottom: 50px;
+}
+
+section .card p {
+    font-size: 0.9rem;
+}
