--- a/Styling/style.css
+++ b/Styling/style.css
@@ -1,106 +1,294 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
+/*GOOGLE FONTS*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Poppins:wght@400;500&display=swap');
+
+/* VARIABLER CSS */
+:root{
+    --header-height: 3.5rem;
+
+/* COLORS - HSL = Hue, Saturation, Lightness */
+--title-color: hsl(0, 0%, 95%);
+--text-color: hsl(0, 0%, 70%);
+--text-color-light: hsl(0, 0%, 60%);
+--body-color: hsl(0, 0%, 0%);
+--container-color: hsl(0, 0%, 8%);
+
+/* FONT & SIZE */
+--body-font: "Poppins", sans-serif;
+--second-font: "Montserrat", sans-serif;
+--biggest-font-size: 2.75rem;
+--h1-font-size: 1.5rem;
+--h2-font-size: 1.25rem;
+--h3-font-size: 1rem;
+--normal-font-size: 0.9rem;
+--small-font-size: 0.8rem;
+--smallest-font-size: 0.75rem;
+/* FONT WEIGHT - TJOCKLEK */
+--font-regular: 400;
+--font-medium: 500;
+--font-semi-bold: 600;
+
+/* Z INDEX */
+--z-tooltip: 10;
+--z-fixed: 100;
 }
 
-/* Variabler CSS */
-:root{
-    --header-height: 3rem;
-    --font-medium: 500;
-}
-
-/* Färger */
-:root{
-    --first-color: blue;
-    --white-color: #FAFAFA;
-    --dark-color: rgb(36, 36, 36);
-    --text-color: gray;
-}
-
-/* Fonts och storlek */
-:root{
-    --body-font: "Gill Sans", sans-serif;
-    --body-font-size: 6.25rem;
-    --h2-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.8rem; /* Kan  skriva  ".8rem", men tycker det är lätare att förstå om man skriver ut 0 */
-}
-@media screen and (min-width:768px) {
+/* RESPONSIVE TEXT */
+@media screen and (min-width 1152px){
     :root{
-    --body-font-size: 10.5rem;
-    --h2-font-size: 2rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.9rem;
+        --biggest-font-size:5.5rem;
+        --h1-font-size: 2.5rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-fint-size: 0.9rem;
+        --smallest-font-size: 0.8rem;
     }
- }
-
- /* Margins / Mariginaler */
-:root{
-    --mb-1: 0.5rem;
-    --mb-2: 1rem;
-    --mb-3: 1.5rem;
-    --mb-4: 2rem;
 }
 
-/* z index */
-:root{
-    --z-fixed: 100;
-}
-
-/* Base */
-*,::before,::after{
+/* BASE */
+*{
     box-sizing: border-box;
+    padding: 0;
+    margin-right: 0;
 }
+
 html{
     scroll-behavior: smooth;
 }
-body{
-    margin:var(--header-height) 0 0 0;
+
+body,
+button,
+input{
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
     color: var(--text-color);
-    line-height: 1.6;
-}
-h1,h2{
-    margin: 0;
-}
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none; /* Tar bort prickar framför */
-}
-a{
-    text-decoration: none;
-    color: var(--text-color);
-}
-img{
-    max-width: 100%;
-    height: auto;
-    display: block;
 }
 
-/* CSS Classes */
-.section{
-    padding: 3rem 0;
+body{
+    background-color: var(--body-color);
 }
+
+button,
+input{
+    outline:none;
+    border: none;
+}
+
+h1,h2,h3,h4{
+    color: var(--title-color);
+    font-family: var(--second-font);
+    font-weight: var(--font-semi-bold);
+}
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* CSS CLASSES */
+.container{
+    max-width: 1120px;
+    margin-inline: 1.5rem;
+}
+
+.grid{
+    display: grid;
+    gap: 1.5rem;
+}
+
+.section{
+    padding-block: 5rem 1rem;
+}
+
 .section-title{
+    text-align: center;
+    font-size: var(--h1-font-size);
+    margin-bottom: 1.5rem;
+}
+
+.main{
+    overflow: hidden; /* För scroll animation - scrollreveal */
+}
+
+/* HEADER & NAV */
+.header{
+    position: fixed;
+    width: 100%;
+    background-color: transparent;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+}
+
+.nav{
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo{
+    color: var(--title-color);
+    font-family: var(--second-font);
+    font-weight: var(--font-semi-bold);
+}
+
+.nav__toggle,
+.nac__close{
+    display: flex;
+    font-size: 1.25rem;
+    color: var(--title-color);
+    cursor: pointer;
+}
+
+/* NAV FOR PHONE - Liten skärm */
+@media screen and (max-width:1023px){
+    .nav__menu{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        background-color: hsla(0, 0%, 0%, 0.3%); /* För att granska, top: 0; och gray*/
+        width: 100%;
+        padding-block: 4rem;
+        backdrop-filter: blur(24px);
+        -webkit-backdrop-filter: blur(24px); /* För safari */
+        transition: top 0.4s;
+    }
+}
+
+.nav__list{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+
+}
+
+.nav__link{
+    color: var(--title-color);
+    font-family: var(--second-font);
+    font-weight: var(--font-medium);
+}
+
+.nav__close{
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+}
+
+/* Show Menu */
+.show-menu{
+    top: 0;
+}
+
+/* HOME PAGE */
+.home{
     position: relative;
-    font-size: var(--h2-font-size);
-    color: var(--dark-color);
-    margin: var(--mb-4) 0;
+}
+
+.home__bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 750px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.home__shadow{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(180deg,
+                hsla(0, 0%, 0%, 0) 58%, /* Hur mkt "filter" det blir över hela bilden*/
+                hsl(0, 0%, 0%) 78%); /* Styr skuggningen från nederkanten */
+}
+
+.home__container{
+    position: relative;
+    padding-top: 3rem;
+    row-gap: 3rem;
+}
+
+.home__data{
     text-align: center;
 }
-.section-title::after{
+
+.home__subtitle{
+    font-size: var(--h3-font-size);
+    margin-bottom: 0.5rem;
+}
+
+.home__title{
+    font-size: var(--biggest-font-size);
+    margin-bottom: 1rem;
+}
+
+.home__description{
+    margin-bottom: 2rem;
+    color: var(--title-color);
+}
+
+.home__cards{
+    grid-template-columns: 240px;
+    justify-content: center;
+}
+
+.home__card{
+    position: relative;
+    overflow: hidden; /* VAD GÖR DETTA*/
+}
+
+.home__card-img{
+    transition: transform 0.4s;
+}
+
+-home__card-shadow{
     position: absolute;
-    content: "";
-    width: 32px;
-    height: 0.2rem;
+    width: 100%;
+    height: 100%;
+    top: 0;
     left: 0;
-    right: 0;
-    margin: auto;
-    top: 2rem;
-    background-color: var(--first-color);
+    background: linear-gradient(180deg,
+                hsla(0, 0%, 0%,0 ) 50%,
+                hsl(0, 0%, 0%) 125%);
+}
+
+.home__card-title{ /* Vart namnen hamnar på bilderna */
+    position: absolute;
+    left: 1rem;
+    bottom: 1rem;
+    font-size: var(--h3-font-size);
+    z-index: 1;
+}
+
+.home__card:hover .home__card-img{ /* Zoomar in bilden vid mousehover */
+    transform: scale(1.2);
+}
+
+/*  BUTTON  */
+.button{
+    background-color: hsla(0, 0%, 100%, 0.2);
+    padding: 1.25rem 1.5rem;
+    color: var(--title-color);
+    display: inline-flex;
+    align-items: center;
+    column-gap: 0.5rem;
+    font-family: var(--second-font);
+    font-weight: var(--font-semi-bold);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: (24px); /* Safari */
 }
