--- a/Styling/style.css
+++ b/Styling/style.css
@@ -191,6 +191,20 @@ img{
     top: 0;
 }
 
+/* Blur For Header */ 
+.blur-header::after{
+    content: '';
+    position: absolute;
+    width: 1000%;
+    height: 100%;
+    background-color: hsla(0, 0%, 0%, 3%);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px); /* När man scrollar ner får menyn ett blur*/
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 /* HOME PAGE */
 .home{
     position: relative;
@@ -279,7 +293,7 @@ img{
     transform: scale(1.2);
 }
 
-/*  BUTTON  */
+/*  BUTTON IN MENU */
 .button{
     background-color: hsla(0, 0%, 100%, 0.2);
     padding: 1.25rem 1.5rem;
@@ -291,4 +305,14 @@ img{
     font-weight: var(--font-semi-bold);
     backdrop-filter: blur(24px);
     -webkit-backdrop-filter: (24px); /* Safari */
+}
+
+.button i{
+    font-size: 1.25rem;
+    transition: transform 0.4s;
+    font-weight: initial;
+}
+
+.button:hover i{
+    transform: translateX(0.25rem)
 }
