--- a/Styling/style.css
+++ b/Styling/style.css
@@ -270,7 +270,7 @@ img{
     transition: transform 0.4s;
 }
 
--home__card-shadow{
+.home__card-shadow{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -315,4 +315,118 @@ img{
 
 .button:hover i{
     transform: translateX(0.25rem)
+}
+
+/* Atlas */
+.atlas__container{
+    row-gap: 3rem;
+}
+
+.atlas__data{
+    text-align: center;
+}
+
+.atlas__description{
+    margin-bottom: 2rem;
+}
+
+.atlas__image{
+    position: relative;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.atlas__img{
+    width: 300px;
+    transition: transform 0.4s;
+}
+
+.atlas__shadow{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg,
+                hsla(0, 0%, 0%, 0) 50%,
+                hsl(0, 0%, 0% ,100%));
+}
+
+.atlas__image:hover .atlas__img{
+    transform: scale(1.2)
+}
+
+/* FOOTER */
+.footer{
+    padding-block: 2.5rem;
+    background-color: var(--container-color);
+}
+
+.footer__content{
+    row-gap: 3.5rem;
+}
+
+.footer__logo{
+    display: inline-block;
+    font-size: var(--h2-font-size);
+    font-size: var(--second-font);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: 1rem;
+}
+
+.footer__data{
+    grid-template-columns: repeat(2, max-content);
+    gap: 2.5rem 3.5rem;
+}
+
+.footer__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: 1rem;
+}
+
+.footer__links{
+    display: grid;
+    row-gap: 0.75rem;
+}
+
+.footer__link{
+    color: var(--text-color);
+    transition: color 0.4s;
+}
+
+.footer__link:hover{
+    color: var(--title-color);
+}
+
+.footer__group,
+.footer__social{
+    display: flex;
+}
+
+.footer__group{
+    margin-top: 3rem;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2rem;
+}
+
+.footer__social{
+    column-gap: 2rem;
+}
+
+.footer__social-link{
+    color: var(--text-color);
+    font-size: 1.2rem;
+    transition: color 0.4s, transform 0.4s;
+}
+
+.footer__social-link:hover{
+    color: var(--title-color);
+    transform: translateY(-0.3rem);
+}
+
+.footer__copy{
+    font-size: var(--smallest-font-size);
+    color: var(--text-color-light);
+    text-align: center;
 }
