fixed responsive text typo

--- a/Styling/style.css
+++ b/Styling/style.css
@@ -34,7 +34,7 @@
 }
 
 /* RESPONSIVE TEXT */
-@media screen and (min-width 1152px){
+@media screen and (min-width:1152px){
     :root{
         --biggest-font-size:5.5rem;
         --h1-font-size: 2.5rem;
